syntax = "proto3";

import "common/common-services.proto";

option java_multiple_files = true;
option java_package = "com.guedim.grpcflix.user";

message UserSearchRequest {
  string login_id = 1;
}

message UserResponse {
  string login_id = 1;
  string name = 2;
  common.Genre genre = 3;
}

message UserGenreUpdateRequest {
  string login_id = 1;
  common.Genre genre = 2;
}

service UserService {
  rpc getUserGenre (UserSearchRequest) returns (UserResponse);
  rpc updateUserGenre (UserGenreUpdateRequest) returns (UserResponse);
}